--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
-    <link rel="stylesheet" href="styles.css?v=15">
+    <link rel="stylesheet" href="styles.css?v=16">
     <script src="https://applepay.cdn-apple.com/jsapi/v1/apple-pay-sdk.js"></script>
 </head>
-<body style="background-image: url('cream-pot.png'); background-size: 60vh; background-position: center; background-repeat: no-repeat; background-attachment: fixed; background-color: #FFF8F3;">
+<body>
     <!-- Navigation arrows -->
     <div class="nav-arrow right" onclick="slideToLavender()">→</div>
     <div class="nav-arrow left" onclick="slideToCherry()">←</div>
